--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,15 @@
 :root{
   --green: #6aa547;
-  --text: #191919;    
+  --text: #191919;
   --muted: #4a4a4a;
   --border: rgba(0,0,0,.10);
 }
 
-
+html{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
 
 .body {
   font-size: 16px;
@@ -15,11 +19,12 @@
 }
 
 .h3{
-   margin: 0 0 12px;
+  margin: 0 0 12px;
   font-family: "Arapey", serif;
   color: #191919;
   font-size: 42px;
   line-height: 1.1;
+  font-weight: 600;
 }
 
 .h4 {
@@ -28,6 +33,7 @@
   line-height: 1.15;
   margin: 0 0 6px;
   color: var(--text);
+  font-weight: 600;
 }
 
 .introEyebrow {
@@ -48,27 +54,19 @@
   margin: 0 auto;
 }
 
-
-
-
-
 .btnPrimary {
   width: 222px;
   height: 52px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-
   background: #6aa547;
   color: #ffffff;
-
   font-size: 16px;
   font-weight: 800;
   text-decoration: none;
-
   border-radius: 0;
   border: 3px solid #6aa547;
-
   transition: background 0.15s ease, color 0.15s ease;
 }
 
@@ -77,24 +75,19 @@
   color: #6aa547;
 }
 
-
 .btnSecondary {
   width: 222px;
   height: 52px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-
   background: transparent;
   color: #6aa547;
-
   font-size: 16px;
   font-weight: 800;
   text-decoration: none;
-
   border-radius: 0;
   border: 3px solid #6aa547;
-
   transition: background 0.15s ease, color 0.15s ease;
 }
 
@@ -102,8 +95,6 @@
   background: #6aa547;
   color: #ffffff;
 }
-
-
 
 .srOnly{
   position:absolute;
@@ -113,7 +104,6 @@
   white-space:nowrap; border:0;
 }
 
-
 @media (max-width: 768px) {
   .h3 {
     font-size: 35px;
@@ -122,5 +112,4 @@
   .h4 {
     font-size: 26px;
   }
-
 }
