--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -66,13 +66,13 @@
   line-height: 1.1;
 }
 
-.introText {
+/*.introText {
   margin: 0;
   color: #191919;
   font-size: 16px;
   line-height: 1.6;
   max-width: 56ch;
-}
+}*/
 
 .introCtas {
   margin-top: 25px;
