--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -75,13 +75,13 @@
   margin-bottom: 25px;
 }
 
-.tText {
+/*.tText {
   margin: 0;
   color: var(--text);
   font-size: 16px;
   line-height: 1.6;
   max-width: 58ch;
-}
+}*/
 
 .testimonialsCtas {
   margin-top: 42px;
