--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,11 +13,11 @@ html {
   text-rendering: optimizeLegibility;
 }
 
-.h1 {
+h1 {
     margin: 0;
   color: var(--hero-ink);
   font-family: "Arapey", serif;
-  font-size: clamp(50px, 5.6vw, 74px);
+  font-size: clamp(45px, 5.6vw, 74px);
   font-weight: 700;
   line-height: 1.05;
 }
